test/bad/access-private-member.sam
// ERROR_COUNT: 1
// access-private-member.sam:14:13-14:16: [UnresolvedName]: Name `A.b` is not resolved.

class A {
  private function b(): int = 3
}

class C(val v: bool) {
  function init(): C = { v: true }
}

class Main {
  function main(): unit = {
    val _ = A.b();
    val _ = C.init();
  }
}
